# mlops-55

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yaml  config_cpu.yaml  docker-compose.yml  mmlu_tiny_split.dvc  pyproject.toml  ruff.toml  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: cml_data.yaml  tests.yaml
configs/: config.yaml  drift_config.yaml  test_config.yaml  train_config.yaml
configs/datamodule/: debug.yaml  default.yaml
configs/experiment/: debug.yaml  exp1.yaml  exp2.yaml  exp3.yaml
configs/experiments/: exp1.yaml
configs/optimizer/: adam.yaml  sgd.yaml
configs/test/: default.yaml
configs/train/: base.yaml  cpu.yaml  debug.yaml  default.yaml  distributed_data.yaml  distributed_train.yaml  full.yaml  local.yaml
data/processed/: mmlu-balanced.dvc  mmlu-debug.dvc  mmlu.dvc  mmlu_small.dvc  mmlu_tiny.dataset.dvc  mmlu_tiny.dvc  mmlu_tiny_raw.dvc  mmlu_tiny_split.dvc  test_binary_n100.dataset.dvc  tiny_mmlu_motz.dvc
data/raw/: mmlu-balanced.dvc  mmlu-debug.dvc  mmlu.dvc  mmlu_small.dvc  mmlu_tiny_split.dvc
dockerfiles/: api.dockerfile  app_startup.sh  frontend.dockerfile  preprocess.dockerfile  setup.dockerfile  supervisord.conf  train.dockerfile
docs/: mkdocs.yaml
reports/: README.md  drift_report.html
src/: __init__.py
src/project/: __init__.py  api.py  cli.py  collate.py  configs.py  data.py  data_drift.py  datasets_statistics.py  evaluate.py  frontend.py  mmlu_loader.py  mmlu_processor.py  model.py  model_inference.py  settings.py  streamlit_app.py  sweep.py  tools.py  train.py  utils.py  visualize.py
tests/: test_data.py  test_data_loading.py  test_data_processing.py  test_dataloader.py  test_dataprocessor.py  test_dataset.py  test_frontend.py  test_model.py  test_train.py
tests/integrationtests/: test_api.py
